vbnc/vbnc/tests/Errors/30060-6.vb
Class T
    Const M_String As String = True
End Class